--- a/app/src/main/res/layout-sw320dp/layout_equalizer.xml
+++ b/app/src/main/res/layout-sw320dp/layout_equalizer.xml
@@ -3,7 +3,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/colorPrimary"
+    android:background="@color/bgcolor"
               android:orientation="vertical">
 
     <LinearLayout
@@ -52,6 +52,7 @@
                 android:layout_centerVertical="true"
                 android:background="?android:attr/selectableItemBackground"
                 android:padding="8dp"
+                android:tint="@color/_light_gray"
                 app:srcCompat="@drawable/ic_volume_mute_black_24dp"/>
 
             <SeekBar
@@ -61,7 +62,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/volume_high"
                 android:layout_toRightOf="@+id/volume_mute"
-                android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
+
                 android:thumbOffset="8dp"/>
 
             <ImageButton
@@ -119,7 +120,6 @@
                         android:progress="16"
                         android:progressBackgroundTint="@color/textColorSecondary"
                         android:splitTrack="false"
-                        android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
                         android:thumbOffset="8dp"
                         app:seekBarRotation="CW270"/>
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
@@ -174,7 +174,7 @@
                         android:progress="16"
                         android:progressBackgroundTint="@color/textColorSecondary"
                         android:splitTrack="false"
-                        android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
+
                         android:thumbOffset="8dp"
                         app:seekBarRotation="CW270"/>
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
@@ -226,7 +226,7 @@
                         android:progress="16"
                         android:progressBackgroundTint="@color/textColorSecondary"
                         android:splitTrack="false"
-                        android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
+
                         android:thumbOffset="8dp"
                         app:seekBarRotation="CW270"/>
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
@@ -277,7 +277,7 @@
                         android:progress="16"
                         android:progressBackgroundTint="@color/textColorSecondary"
                         android:splitTrack="false"
-                        android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
+
                         android:thumbOffset="8dp"
                         app:seekBarRotation="CW270"/>
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
@@ -330,7 +330,7 @@
                         android:progress="16"
                         android:progressBackgroundTint="@color/textColorSecondary"
                         android:splitTrack="false"
-                        android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
+
                         android:thumbOffset="8dp"
                         app:seekBarRotation="CW270"/>
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
@@ -384,7 +384,7 @@
                         android:progress="16"
                         android:progressBackgroundTint="@color/textColorSecondary"
                         android:splitTrack="false"
-                        android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
+
                         android:thumbOffset="8dp"
                         app:seekBarRotation="CW270"/>
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
@@ -437,7 +437,7 @@
                         android:progress="16"
                         android:progressBackgroundTint="@color/textColorSecondary"
                         android:splitTrack="false"
-                        android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
+
                         android:thumbOffset="8dp"
                         app:seekBarRotation="CW270"/>
                 </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
