--- a/app/src/main/res/layout/fragment_bottom_bar.xml
+++ b/app/src/main/res/layout/fragment_bottom_bar.xml
@@ -4,37 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_background"
     android:layout_width="match_parent"
-    android:layout_height="255dp"
+    android:layout_height="wrap_content"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical">
-
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="12dp"
-        android:tint="@color/colorPrimary"
-        app:backgroundTint="@color/white"
-        app:borderWidth="0dp"
-        app:elevation="22dp"
-        app:fabSize="mini"
-        app:srcCompat="@drawable/play" />
-
-    <View
-        android:id="@+id/shadow"
-        android:layout_width="match_parent"
-        android:layout_height="12dp"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/drawable_black_to_transparent" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_below="@id/shadow"
-        android:elevation="8dp">
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:elevation="8dp"
+        app:cardElevation="8dp">
 
         <RelativeLayout
             android:id="@+id/simple_one"
@@ -42,10 +25,11 @@
             android:layout_height="70dp"
             android:layout_below="@id/shadow">
 
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+                android:layout_height="match_parent" />
 
 
             <SeekBar
@@ -62,7 +46,8 @@
                 android:progress="0"
                 android:thumb="@drawable/transparent_drawable"
                 android:thumbOffset="100000dp"
-                android:thumbTint="@null" />
+                android:thumbTint="@null"
+                android:visibility="gone" />
 
             <android.support.v7.widget.CardView
                 android:id="@+id/durationcard"
@@ -86,6 +71,21 @@
                     android:textStyle="bold"
                     tools:text="00:00" />
             </android.support.v7.widget.CardView>
+
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="12dp"
+                android:layout_toLeftOf="@+id/durationcard"
+                android:tint="@color/colorPrimary"
+                app:backgroundTint="@color/white"
+                app:fabSize="mini"
+                app:srcCompat="@drawable/play" />
+
+
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
