--- a/app/src/main/res/layout/layout_equalizer.xml
+++ b/app/src/main/res/layout/layout_equalizer.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/colorPrimary"
-              android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/id_toolbar_container"
@@ -32,8 +31,8 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="@string/equalizer"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/text_size_x_large"/>
+
+                    android:textSize="@dimen/text_size_x_large" />
             </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
@@ -59,7 +58,8 @@
                 android:layout_centerVertical="true"
                 android:background="?android:attr/selectableItemBackground"
                 android:padding="8dp"
-                app:srcCompat="@drawable/ic_volume_mute_black_24dp"/>
+                android:tint="@color/_light_gray"
+                app:srcCompat="@drawable/ic_volume_mute_black_24dp" />
 
             <SeekBar
                 android:id="@+id/volume_seekbar"
@@ -69,8 +69,7 @@
                 android:layout_toLeftOf="@+id/volume_high"
                 android:layout_toRightOf="@+id/volume_mute"
                 android:progressBackgroundTint="@color/gray"
-                android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                />
+                android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light" />
 
             <ImageButton
                 android:id="@+id/volume_high"
@@ -80,7 +79,7 @@
                 android:layout_centerVertical="true"
                 android:background="?android:attr/selectableItemBackground"
                 android:padding="8dp"
-                app:srcCompat="@drawable/ic_volume_up_black_24dp"/>
+                app:srcCompat="@drawable/ic_volume_up_black_24dp" />
 
         </RelativeLayout>
 
@@ -110,7 +109,7 @@
                     android:singleLine="true"
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/white"
+
                     />
 
                 <com.boom.music.player.Views.VerticalSeekBar
@@ -121,8 +120,7 @@
                     android:progress="16"
                     android:progressBackgroundTint="@color/gray"
                     android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                    android:thumbOffset="8dp"
-                    />
+                    android:thumbOffset="8dp" />
 
 
                 <TextView
@@ -134,7 +132,6 @@
                     android:singleLine="true"
                     android:text="50 Hz"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/white"
                     />
 
             </LinearLayout>
@@ -157,7 +154,6 @@
                     android:singleLine="true"
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/white"
 
 
                     />
@@ -170,7 +166,7 @@
                     android:progress="16"
                     android:progressBackgroundTint="@color/gray"
                     android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                    android:thumbOffset="8dp"/>
+                    android:thumbOffset="8dp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -180,7 +176,6 @@
                     android:singleLine="true"
                     android:text="130 Hz"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/white"
 
 
                     />
@@ -204,7 +199,6 @@
                     android:singleLine="true"
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/white"
 
 
                     />
@@ -217,7 +211,7 @@
                     android:progress="16"
                     android:progressBackgroundTint="@color/gray"
                     android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                    android:thumbOffset="8dp"/>
+                    android:thumbOffset="8dp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -227,7 +221,6 @@
                     android:singleLine="true"
                     android:text="320 Hz"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/white"
 
 
                     />
@@ -245,14 +238,12 @@
                     android:id="@+id/e800hztxt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
                     android:layout_gravity="center"
                     android:ellipsize="marquee"
                     android:gravity="center"
                     android:singleLine="true"
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/white"
 
 
                     />
@@ -265,7 +256,7 @@
                     android:progress="16"
                     android:progressBackgroundTint="@color/gray"
                     android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                    android:thumbOffset="8dp"/>
+                    android:thumbOffset="8dp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -275,7 +266,7 @@
                     android:singleLine="true"
                     android:text="800 Hz"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/white"
+
                     />
             </LinearLayout>
 
@@ -297,7 +288,6 @@
                     android:singleLine="true"
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/white"
 
 
                     />
@@ -310,7 +300,7 @@
                     android:progress="16"
                     android:progressBackgroundTint="@color/gray"
                     android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                    android:thumbOffset="8dp"/>
+                    android:thumbOffset="8dp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -320,7 +310,7 @@
                     android:singleLine="true"
                     android:text="2 kHz"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/white"
+
                     />
             </LinearLayout>
 
@@ -342,7 +332,6 @@
                     android:singleLine="true"
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/white"
 
 
                     />
@@ -355,7 +344,7 @@
                     android:progress="16"
                     android:progressBackgroundTint="@color/gray"
                     android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                    android:thumbOffset="8dp"/>
+                    android:thumbOffset="8dp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -366,7 +355,7 @@
                     android:singleLine="true"
                     android:text="5 kHz"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/white"
+
                     />
             </LinearLayout>
 
@@ -387,8 +376,7 @@
                     android:gravity="center"
                     android:singleLine="true"
                     android:text="0"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/white"/>
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 <com.boom.music.player.Views.VerticalSeekBar
                     android:id="@+id/slider_7"
@@ -398,7 +386,7 @@
                     android:progress="16"
                     android:progressBackgroundTint="@color/gray"
                     android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                    android:thumbOffset="8dp"/>
+                    android:thumbOffset="8dp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -408,7 +396,7 @@
                     android:singleLine="true"
                     android:text="12.5 Hz"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:textColor="@color/white"
+
                     />
             </LinearLayout>
         </LinearLayout>
@@ -440,7 +428,7 @@
                     app:startAngle="45"
                     app:sweepAngle="270"
                     app:thumb="@color/white"
-                    app:touchInside="true"/>
+                    app:touchInside="true" />
 
                 <ImageButton
                     android:id="@+id/image_button_virtualizer"
@@ -456,7 +444,7 @@
                     android:scaleType="fitCenter"
                     android:scaleX="@dimen/control_button_scale"
                     android:scaleY="@dimen/control_button_scale"
-                    android:src="@drawable/drawable_eq_circle_"/>
+                    android:src="@drawable/drawable_eq_circle_" />
 
                 <TextView
                     android:id="@+id/virtualizer"
@@ -468,8 +456,7 @@
                     android:text="@string/virtualizer"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/textColorSecondary"
-                    android:textStyle="bold"
-                    />
+                    android:textStyle="bold" />
 
             </RelativeLayout>
 
@@ -494,7 +481,7 @@
                     app:startAngle="45"
                     app:sweepAngle="270"
                     app:thumb="@color/white"
-                    app:touchInside="true"/>
+                    app:touchInside="true" />
 
                 <ImageButton
                     android:id="@+id/image_button_bass_boost"
@@ -510,7 +497,7 @@
                     android:scaleType="fitCenter"
                     android:scaleX="@dimen/control_button_scale"
                     android:scaleY="@dimen/control_button_scale"
-                    android:src="@drawable/drawable_eq_circle_"/>
+                    android:src="@drawable/drawable_eq_circle_" />
 
                 <TextView
                     android:id="@+id/bass_boost"
@@ -522,8 +509,7 @@
                     android:text="@string/bass_boost"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/textColorSecondary"
-                    android:textStyle="bold"
-                    />
+                    android:textStyle="bold" />
             </RelativeLayout>
         </LinearLayout>
 
@@ -551,7 +537,7 @@
                     android:textAllCaps="false"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/pink"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -574,7 +560,7 @@
                         android:id="@+id/reverb_spinner"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:padding="0dp"/>
+                        android:padding="0dp" />
 
                 </RelativeLayout>
             </LinearLayout>
@@ -599,7 +585,7 @@
                     android:textAllCaps="false"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/pink"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
