--- a/app/src/main/res/xml/settings_appearance.xml
+++ b/app/src/main/res/xml/settings_appearance.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory
-        android:title="@string/appearance">
+    <PreferenceCategory android:title="@string/appearance">
 
         <Preference
             android:key="preference_key_app_theme"
             android:summary="@string/app_theme_description"
-            android:title="@string/application_theme"/>
+            android:title="@string/application_theme" />
 
-
-        <Preference
+        <ListPreference
+            android:entries="@array/fragments_titles"
+            android:entryValues="@array/fragments_titles_number"
             android:key="preference_key_startup_screen"
             android:summary="@string/default_browser_description"
-            android:title="@string/default_browser"/>
+            android:title="@string/default_browser" />
 
         <Preference
+            android:fragment="com.boom.music.player.Setting.CustomizeSectionFragment"
             android:key="preference_key_tab_items"
             android:summary="@string/choose_tab_items"
-            android:title="@string/tabs"/>
+            android:title="@string/tabs" />
     </PreferenceCategory>
 </PreferenceScreen>
