--- a/app/src/main/res/layout-land/activity_browser_sub_list.xml
+++ b/app/src/main/res/layout-land/activity_browser_sub_list.xml
@@ -129,6 +129,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@color/white"
             android:clipToPadding="false"
             android:drawSelectorOnTop="true"
             android:paddingTop="28dp"
