--- a/app/src/main/res/layout/list_view_sub_browser_item.xml
+++ b/app/src/main/res/layout/list_view_sub_browser_item.xml
@@ -26,7 +26,7 @@
         android:layout_centerVertical="true"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:textColor="@color/white" />
+        android:textColor="@color/textColorSecondary" />
 
     <LinearLayout
         android:id="@+id/listViewTextContainer"
